# spec-kit-copilot-web-benchmark

python-starter/: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml  pytest.ini
python-starter/.devcontainer/: devcontainer.json
python-starter/.github/: copilot-instructions.md
python-starter/.github/agents/: implementer.agent.md  orchestrator.agent.md  planner.agent.md  reviewer.agent.md  speckit.analyze.agent.md  speckit.implement.agent.md  speckit.specify.agent.md  trace-auditor.agent.md  web-explorer.agent.md
python-starter/.github/hooks/: README.md  policy.json
python-starter/.github/instructions/: playwright.instructions.md  python.instructions.md  runbook.instructions.md  security.instructions.md
python-starter/.github/prompts/: ghc.resume-loop.prompt.md  ghc.trace-audit.prompt.md  ghc.web-explore.prompt.md
python-starter/.specify/memory/: constitution.md
python-starter/agents/: speckit.taskstoissues.agent.md
python-starter/docs/reports/: ghc-chat-agentic-retrofit-report.md
python-starter/docs/site-runbooks/: README.md
python-starter/scripts/: template-sync.ps1
python-starter/site/: server.py
python-starter/site/public/: index.html  request.html  styles.css
python-starter/src/benchmark/: __init__.py  browser_adapter.py  cli.py  observation.py  persistence.py  policy.py  runner.py  scenarios.py  types.py
python-starter/src/benchmark_site/: __init__.py  server.py
python-starter/src/template_sync/: __init__.py  cli.py  core.py
python-starter/tests/: conftest.py
python-starter/tests/e2e/: test_benchmark_runner.py
(+74 files in other folders)
