[project]
name = "ghc-web-automation-benchmark"
version = "0.1.0"
requires-python = ">=3.10"
description = "Controlled Playwright-first benchmark for GitHub Copilot web automation behavior (Python port)"
dependencies = [
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
